workspace/sl/src/Frontend/Parser/SlParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from src/Frontend/Parser/SlParser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Sl                                (0)
	Sl -> Stmts                                        (1)
	Stmts -> Stmt Stmts                                (2)
	Stmts ->                                           (3)
	Stmt -> 'let' var ':' Type '=' Exp ';'             (4)
	Stmt -> 'let' var ':' Type ';'                     (5)
	Stmt -> 'func' var '(' Params ')' '{' Stmts '}'    (6)
	Stmt -> 'func' var '(' Params ')' ':' Type '{' Stmts '}'   (7)
	Stmt -> 'struct' var '{' StructFields '}'          (8)
	Stmt -> 'if' '(' Exp ')' '{' Stmts '}' 'else' '{' Stmts '}'   (9)
	Stmt -> 'if' '(' Exp ')' '{' Stmts '}'             (10)
	Stmt -> 'while' '(' Exp ')' '{' Stmts '}'          (11)
	Stmt -> 'return' Exp ';'                           (12)
	Stmt -> 'return' ';'                               (13)
	Stmt -> 'print' '(' Exp ')' ';'                    (14)
	Stmt -> Exp ';'                                    (15)
	Params -> Param ',' Params                         (16)
	Params -> Param                                    (17)
	Params ->                                          (18)
	Param -> var ':' Type                              (19)
	Param -> var                                       (20)
	StructFields -> StructField ';' StructFields       (21)
	StructFields ->                                    (22)
	StructField -> var ':' Type                        (23)
	Args -> Exp ',' Args                               (24)
	Args -> Exp                                        (25)
	Args ->                                            (26)
	Type -> 'int'                                      (27)
	Type -> 'float'                                    (28)
	Type -> 'bool'                                     (29)
	Type -> 'string'                                   (30)
	Type -> 'void'                                     (31)
	Type -> var                                        (32)
	Type -> var '[' intLit ']'                         (33)
	Exp -> BinaryExp                                   (34)
	BinaryExp -> UnaryExp                              (35)
	BinaryExp -> BinaryExp '=' BinaryExp               (36)
	BinaryExp -> BinaryExp '==' BinaryExp              (37)
	BinaryExp -> BinaryExp '!=' BinaryExp              (38)
	BinaryExp -> BinaryExp '<' BinaryExp               (39)
	BinaryExp -> BinaryExp '>' BinaryExp               (40)
	BinaryExp -> BinaryExp '<=' BinaryExp              (41)
	BinaryExp -> BinaryExp '>=' BinaryExp              (42)
	BinaryExp -> BinaryExp '&&' BinaryExp              (43)
	BinaryExp -> BinaryExp '||' BinaryExp              (44)
	BinaryExp -> BinaryExp '+' BinaryExp               (45)
	BinaryExp -> BinaryExp '-' BinaryExp               (46)
	BinaryExp -> BinaryExp '*' BinaryExp               (47)
	BinaryExp -> BinaryExp '/' BinaryExp               (48)
	BinaryExp -> BinaryExp '%' BinaryExp               (49)
	UnaryExp -> PrimaryExp                             (50)
	UnaryExp -> '!' UnaryExp                           (51)
	PrimaryExp -> AtomExp                              (52)
	PrimaryExp -> PrimaryExp '[' Exp ']'               (53)
	PrimaryExp -> PrimaryExp '.' var                   (54)
	AtomExp -> intLit                                  (55)
	AtomExp -> floatLit                                (56)
	AtomExp -> stringLit                               (57)
	AtomExp -> 'true'                                  (58)
	AtomExp -> 'false'                                 (59)
	AtomExp -> var                                     (60)
	AtomExp -> var '(' Args ')'                        (61)
	AtomExp -> var '{' Args '}'                        (62)
	AtomExp -> '(' Exp ')'                             (63)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'let'          { Token _ TLet }
	':'            { Token _ TAssign }
	'='            { Token _ TAttribution }
	var            { Token _ (TIdent $$) }
	'('            { Token _ TLParen }
	')'            { Token _ TRParen }
	';'            { Token _ TSemi }
	'func'         { Token _ TFunc }
	','            { Token _ TComma }
	'struct'       { Token _ TStruct }
	'if'           { Token _ TIf }
	'else'         { Token _ TElse }
	'while'        { Token _ TWhile }
	'return'       { Token _ TReturn }
	'{'            { Token _ TLBrace }
	'}'            { Token _ TRBrace }
	'['            { Token _ TLBracket }
	']'            { Token _ TRBracket }
	'.'            { Token _ TDot }
	'print'        { Token _ TPrint }
	'int'          { Token _ TInt }
	intLit         { Token _ (LitInt $$) }
	'float'        { Token _ TFloat }
	floatLit       { Token _ (LitFloat $$) }
	'void'         { Token _ TVoid }
	'bool'         { Token _ TBool }
	'true'         { Token _ TTrue }
	'false'        { Token _ TFalse }
	'string'       { Token _ TString }
	stringLit      { Token _ (LitString $$) }
	'+'            { Token _ TPlus }
	'-'            { Token _ TMinus }
	'*'            { Token _ TTimes }
	'/'            { Token _ TDiv }
	'%'            { Token _ TMod }
	'!'            { Token _ TNot }
	'=='           { Token _ TEq }
	'!='           { Token _ TNeq }
	'<'            { Token _ TLt }
	'>'            { Token _ TGt }
	'<='           { Token _ TLeq }
	'>='           { Token _ TGeq }
	'&&'           { Token _ TAnd }
	'||'           { Token _ TOr }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Sl              rule  1
	Stmts           rules 2, 3
	Stmt            rules 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
	Params          rules 16, 17, 18
	Param           rules 19, 20
	StructFields    rules 21, 22
	StructField     rule  23
	Args            rules 24, 25, 26
	Type            rules 27, 28, 29, 30, 31, 32, 33
	Exp             rule  34
	BinaryExp       rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49
	UnaryExp        rules 50, 51
	PrimaryExp      rules 52, 53, 54
	AtomExp         rules 55, 56, 57, 58, 59, 60, 61, 62, 63

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . Sl                               (rule 0)

	'let'          shift, and enter state 9
	var            shift, and enter state 10
	'('            shift, and enter state 11
	'func'         shift, and enter state 12
	'struct'       shift, and enter state 13
	'if'           shift, and enter state 14
	'while'        shift, and enter state 15
	'return'       shift, and enter state 16
	'print'        shift, and enter state 17
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23
	%eof           reduce using rule 3

	Sl             goto state 24
	Stmts          goto state 2
	Stmt           goto state 3
	Exp            goto state 4
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 1

	Sl -> . Stmts                                       (rule 1)

	'let'          shift, and enter state 9
	var            shift, and enter state 10
	'('            shift, and enter state 11
	'func'         shift, and enter state 12
	'struct'       shift, and enter state 13
	'if'           shift, and enter state 14
	'while'        shift, and enter state 15
	'return'       shift, and enter state 16
	'print'        shift, and enter state 17
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Stmts          goto state 2
	Stmt           goto state 3
	Exp            goto state 4
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 2

	Sl -> Stmts .                                       (rule 1)

	%eof           reduce using rule 1


State 3

	Stmts -> Stmt . Stmts                               (rule 2)

	'let'          shift, and enter state 9
	var            shift, and enter state 10
	'('            shift, and enter state 11
	'func'         shift, and enter state 12
	'struct'       shift, and enter state 13
	'if'           shift, and enter state 14
	'while'        shift, and enter state 15
	'return'       shift, and enter state 16
	'}'            reduce using rule 3
	'print'        shift, and enter state 17
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23
	%eof           reduce using rule 3

	Stmts          goto state 54
	Stmt           goto state 3
	Exp            goto state 4
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 4

	Stmt -> Exp . ';'                                   (rule 15)

	';'            shift, and enter state 53


State 5

	Exp -> BinaryExp .                                  (rule 34)
	BinaryExp -> BinaryExp . '=' BinaryExp              (rule 36)
	BinaryExp -> BinaryExp . '==' BinaryExp             (rule 37)
	BinaryExp -> BinaryExp . '!=' BinaryExp             (rule 38)
	BinaryExp -> BinaryExp . '<' BinaryExp              (rule 39)
	BinaryExp -> BinaryExp . '>' BinaryExp              (rule 40)
	BinaryExp -> BinaryExp . '<=' BinaryExp             (rule 41)
	BinaryExp -> BinaryExp . '>=' BinaryExp             (rule 42)
	BinaryExp -> BinaryExp . '&&' BinaryExp             (rule 43)
	BinaryExp -> BinaryExp . '||' BinaryExp             (rule 44)
	BinaryExp -> BinaryExp . '+' BinaryExp              (rule 45)
	BinaryExp -> BinaryExp . '-' BinaryExp              (rule 46)
	BinaryExp -> BinaryExp . '*' BinaryExp              (rule 47)
	BinaryExp -> BinaryExp . '/' BinaryExp              (rule 48)
	BinaryExp -> BinaryExp . '%' BinaryExp              (rule 49)

	'='            shift, and enter state 39
	')'            reduce using rule 34
	';'            reduce using rule 34
	','            reduce using rule 34
	'}'            reduce using rule 34
	']'            reduce using rule 34
	'+'            shift, and enter state 40
	'-'            shift, and enter state 41
	'*'            shift, and enter state 42
	'/'            shift, and enter state 43
	'%'            shift, and enter state 44
	'=='           shift, and enter state 45
	'!='           shift, and enter state 46
	'<'            shift, and enter state 47
	'>'            shift, and enter state 48
	'<='           shift, and enter state 49
	'>='           shift, and enter state 50
	'&&'           shift, and enter state 51
	'||'           shift, and enter state 52


State 6

	BinaryExp -> UnaryExp .                             (rule 35)

	'='            reduce using rule 35
	')'            reduce using rule 35
	';'            reduce using rule 35
	','            reduce using rule 35
	'}'            reduce using rule 35
	']'            reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'%'            reduce using rule 35
	'=='           reduce using rule 35
	'!='           reduce using rule 35
	'<'            reduce using rule 35
	'>'            reduce using rule 35
	'<='           reduce using rule 35
	'>='           reduce using rule 35
	'&&'           reduce using rule 35
	'||'           reduce using rule 35


State 7

	UnaryExp -> PrimaryExp .                            (rule 50)
	PrimaryExp -> PrimaryExp . '[' Exp ']'              (rule 53)
	PrimaryExp -> PrimaryExp . '.' var                  (rule 54)

	'='            reduce using rule 50
	')'            reduce using rule 50
	';'            reduce using rule 50
	','            reduce using rule 50
	'}'            reduce using rule 50
	'['            shift, and enter state 37
	']'            reduce using rule 50
	'.'            shift, and enter state 38
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	'*'            reduce using rule 50
	'/'            reduce using rule 50
	'%'            reduce using rule 50
	'=='           reduce using rule 50
	'!='           reduce using rule 50
	'<'            reduce using rule 50
	'>'            reduce using rule 50
	'<='           reduce using rule 50
	'>='           reduce using rule 50
	'&&'           reduce using rule 50
	'||'           reduce using rule 50


State 8

	PrimaryExp -> AtomExp .                             (rule 52)

	'='            reduce using rule 52
	')'            reduce using rule 52
	';'            reduce using rule 52
	','            reduce using rule 52
	'}'            reduce using rule 52
	'['            reduce using rule 52
	']'            reduce using rule 52
	'.'            reduce using rule 52
	'+'            reduce using rule 52
	'-'            reduce using rule 52
	'*'            reduce using rule 52
	'/'            reduce using rule 52
	'%'            reduce using rule 52
	'=='           reduce using rule 52
	'!='           reduce using rule 52
	'<'            reduce using rule 52
	'>'            reduce using rule 52
	'<='           reduce using rule 52
	'>='           reduce using rule 52
	'&&'           reduce using rule 52
	'||'           reduce using rule 52


State 9

	Stmt -> 'let' . var ':' Type '=' Exp ';'            (rule 4)
	Stmt -> 'let' . var ':' Type ';'                    (rule 5)

	var            shift, and enter state 36


State 10

	AtomExp -> var .                                    (rule 60)
	AtomExp -> var . '(' Args ')'                       (rule 61)
	AtomExp -> var . '{' Args '}'                       (rule 62)

	'='            reduce using rule 60
	'('            shift, and enter state 34
	')'            reduce using rule 60
	';'            reduce using rule 60
	','            reduce using rule 60
	'{'            shift, and enter state 35
	'}'            reduce using rule 60
	'['            reduce using rule 60
	']'            reduce using rule 60
	'.'            reduce using rule 60
	'+'            reduce using rule 60
	'-'            reduce using rule 60
	'*'            reduce using rule 60
	'/'            reduce using rule 60
	'%'            reduce using rule 60
	'=='           reduce using rule 60
	'!='           reduce using rule 60
	'<'            reduce using rule 60
	'>'            reduce using rule 60
	'<='           reduce using rule 60
	'>='           reduce using rule 60
	'&&'           reduce using rule 60
	'||'           reduce using rule 60


State 11

	AtomExp -> '(' . Exp ')'                            (rule 63)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Exp            goto state 33
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 12

	Stmt -> 'func' . var '(' Params ')' '{' Stmts '}'    (rule 6)
	Stmt -> 'func' . var '(' Params ')' ':' Type '{' Stmts '}'    (rule 7)

	var            shift, and enter state 32


State 13

	Stmt -> 'struct' . var '{' StructFields '}'         (rule 8)

	var            shift, and enter state 31


State 14

	Stmt -> 'if' . '(' Exp ')' '{' Stmts '}' 'else' '{' Stmts '}'    (rule 9)
	Stmt -> 'if' . '(' Exp ')' '{' Stmts '}'            (rule 10)

	'('            shift, and enter state 30


State 15

	Stmt -> 'while' . '(' Exp ')' '{' Stmts '}'         (rule 11)

	'('            shift, and enter state 29


State 16

	Stmt -> 'return' . Exp ';'                          (rule 12)
	Stmt -> 'return' . ';'                              (rule 13)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	';'            shift, and enter state 28
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Exp            goto state 27
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 17

	Stmt -> 'print' . '(' Exp ')' ';'                   (rule 14)

	'('            shift, and enter state 26


State 18

	AtomExp -> intLit .                                 (rule 55)

	'='            reduce using rule 55
	')'            reduce using rule 55
	';'            reduce using rule 55
	','            reduce using rule 55
	'}'            reduce using rule 55
	'['            reduce using rule 55
	']'            reduce using rule 55
	'.'            reduce using rule 55
	'+'            reduce using rule 55
	'-'            reduce using rule 55
	'*'            reduce using rule 55
	'/'            reduce using rule 55
	'%'            reduce using rule 55
	'=='           reduce using rule 55
	'!='           reduce using rule 55
	'<'            reduce using rule 55
	'>'            reduce using rule 55
	'<='           reduce using rule 55
	'>='           reduce using rule 55
	'&&'           reduce using rule 55
	'||'           reduce using rule 55


State 19

	AtomExp -> floatLit .                               (rule 56)

	'='            reduce using rule 56
	')'            reduce using rule 56
	';'            reduce using rule 56
	','            reduce using rule 56
	'}'            reduce using rule 56
	'['            reduce using rule 56
	']'            reduce using rule 56
	'.'            reduce using rule 56
	'+'            reduce using rule 56
	'-'            reduce using rule 56
	'*'            reduce using rule 56
	'/'            reduce using rule 56
	'%'            reduce using rule 56
	'=='           reduce using rule 56
	'!='           reduce using rule 56
	'<'            reduce using rule 56
	'>'            reduce using rule 56
	'<='           reduce using rule 56
	'>='           reduce using rule 56
	'&&'           reduce using rule 56
	'||'           reduce using rule 56


State 20

	AtomExp -> 'true' .                                 (rule 58)

	'='            reduce using rule 58
	')'            reduce using rule 58
	';'            reduce using rule 58
	','            reduce using rule 58
	'}'            reduce using rule 58
	'['            reduce using rule 58
	']'            reduce using rule 58
	'.'            reduce using rule 58
	'+'            reduce using rule 58
	'-'            reduce using rule 58
	'*'            reduce using rule 58
	'/'            reduce using rule 58
	'%'            reduce using rule 58
	'=='           reduce using rule 58
	'!='           reduce using rule 58
	'<'            reduce using rule 58
	'>'            reduce using rule 58
	'<='           reduce using rule 58
	'>='           reduce using rule 58
	'&&'           reduce using rule 58
	'||'           reduce using rule 58


State 21

	AtomExp -> 'false' .                                (rule 59)

	'='            reduce using rule 59
	')'            reduce using rule 59
	';'            reduce using rule 59
	','            reduce using rule 59
	'}'            reduce using rule 59
	'['            reduce using rule 59
	']'            reduce using rule 59
	'.'            reduce using rule 59
	'+'            reduce using rule 59
	'-'            reduce using rule 59
	'*'            reduce using rule 59
	'/'            reduce using rule 59
	'%'            reduce using rule 59
	'=='           reduce using rule 59
	'!='           reduce using rule 59
	'<'            reduce using rule 59
	'>'            reduce using rule 59
	'<='           reduce using rule 59
	'>='           reduce using rule 59
	'&&'           reduce using rule 59
	'||'           reduce using rule 59


State 22

	AtomExp -> stringLit .                              (rule 57)

	'='            reduce using rule 57
	')'            reduce using rule 57
	';'            reduce using rule 57
	','            reduce using rule 57
	'}'            reduce using rule 57
	'['            reduce using rule 57
	']'            reduce using rule 57
	'.'            reduce using rule 57
	'+'            reduce using rule 57
	'-'            reduce using rule 57
	'*'            reduce using rule 57
	'/'            reduce using rule 57
	'%'            reduce using rule 57
	'=='           reduce using rule 57
	'!='           reduce using rule 57
	'<'            reduce using rule 57
	'>'            reduce using rule 57
	'<='           reduce using rule 57
	'>='           reduce using rule 57
	'&&'           reduce using rule 57
	'||'           reduce using rule 57


State 23

	UnaryExp -> '!' . UnaryExp                          (rule 51)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	UnaryExp       goto state 25
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 24

	%start_parser -> Sl .                               (rule 0)

	%eof           accept


State 25

	UnaryExp -> '!' UnaryExp .                          (rule 51)

	'='            reduce using rule 51
	')'            reduce using rule 51
	';'            reduce using rule 51
	','            reduce using rule 51
	'}'            reduce using rule 51
	']'            reduce using rule 51
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'*'            reduce using rule 51
	'/'            reduce using rule 51
	'%'            reduce using rule 51
	'=='           reduce using rule 51
	'!='           reduce using rule 51
	'<'            reduce using rule 51
	'>'            reduce using rule 51
	'<='           reduce using rule 51
	'>='           reduce using rule 51
	'&&'           reduce using rule 51
	'||'           reduce using rule 51


State 26

	Stmt -> 'print' '(' . Exp ')' ';'                   (rule 14)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Exp            goto state 81
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 27

	Stmt -> 'return' Exp . ';'                          (rule 12)

	';'            shift, and enter state 80


State 28

	Stmt -> 'return' ';' .                              (rule 13)

	'let'          reduce using rule 13
	var            reduce using rule 13
	'('            reduce using rule 13
	'func'         reduce using rule 13
	'struct'       reduce using rule 13
	'if'           reduce using rule 13
	'while'        reduce using rule 13
	'return'       reduce using rule 13
	'}'            reduce using rule 13
	'print'        reduce using rule 13
	intLit         reduce using rule 13
	floatLit       reduce using rule 13
	'true'         reduce using rule 13
	'false'        reduce using rule 13
	stringLit      reduce using rule 13
	'!'            reduce using rule 13
	%eof           reduce using rule 13


State 29

	Stmt -> 'while' '(' . Exp ')' '{' Stmts '}'         (rule 11)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Exp            goto state 79
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 30

	Stmt -> 'if' '(' . Exp ')' '{' Stmts '}' 'else' '{' Stmts '}'    (rule 9)
	Stmt -> 'if' '(' . Exp ')' '{' Stmts '}'            (rule 10)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Exp            goto state 78
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 31

	Stmt -> 'struct' var . '{' StructFields '}'         (rule 8)

	'{'            shift, and enter state 77


State 32

	Stmt -> 'func' var . '(' Params ')' '{' Stmts '}'    (rule 6)
	Stmt -> 'func' var . '(' Params ')' ':' Type '{' Stmts '}'    (rule 7)

	'('            shift, and enter state 76


State 33

	AtomExp -> '(' Exp . ')'                            (rule 63)

	')'            shift, and enter state 75


State 34

	AtomExp -> var '(' . Args ')'                       (rule 61)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	')'            reduce using rule 26
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Args           goto state 74
	Exp            goto state 73
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 35

	AtomExp -> var '{' . Args '}'                       (rule 62)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	'}'            reduce using rule 26
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Args           goto state 72
	Exp            goto state 73
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 36

	Stmt -> 'let' var . ':' Type '=' Exp ';'            (rule 4)
	Stmt -> 'let' var . ':' Type ';'                    (rule 5)

	':'            shift, and enter state 71


State 37

	PrimaryExp -> PrimaryExp '[' . Exp ']'              (rule 53)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	Exp            goto state 70
	BinaryExp      goto state 5
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 38

	PrimaryExp -> PrimaryExp '.' . var                  (rule 54)

	var            shift, and enter state 69


State 39

	BinaryExp -> BinaryExp '=' . BinaryExp              (rule 36)

	var            shift, and enter state 10
	'('            shift, and enter state 11
	intLit         shift, and enter state 18
	floatLit       shift, and enter state 19
	'true'         shift, and enter state 20
	'false'        shift, and enter state 21
	stringLit      shift, and enter state 22
	'!'            shift, and enter state 23

	BinaryExp      goto state 68
	UnaryExp       goto state 6
	PrimaryExp     goto state 7
	AtomExp        goto state 8

State 40

	BinaryExp -> BinaryExp '+' . BinaryExp              (rule 45)
